addons/kyverno/policies/edtech-br_lgpd_children_consent_best_interest-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-br_lgpd_children_consent_best_interest
  annotations:
    rulehub.id: edtech.br_lgpd_children_consent_best_interest
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "edtech.br_lgpd_children_consent_best_interest: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
